--- a/frontend/my-frontend/public/index.html
+++ b/frontend/my-frontend/public/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/book.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Your book-pacing platform, helping you unlock new chapters daily and read at a slower pace" />
+    <meta name="keywords" content="books, reading, daily chapters, unlock chapters" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <title>Book Pacer</title>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/book.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Book Pacer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
